--- a/requirements.txt
+++ b/requirements.txt
@@ -30,3 +30,10 @@ pydantic
 pydantic[email]
 
 grandalf
+
+
+# for document reader
+langchain-community
+sentence-transformers
+faiss-cpu
+langchain-cli
