--- a/requirements.txt
+++ b/requirements.txt
@@ -37,3 +37,7 @@ langchain-community
 sentence-transformers
 faiss-cpu
 langchain-cli
+
+# pip install "langchain==0.1.17"
+# pip install "langchain-community==0.0.36"
+# pip install "langchain-text-splitters==0.0.1"
