learnt diff type of retriever 1. on the basis of data source 2. on the basis of there searching machanism ; try to understant 1. wikipedia retriever, maximum marginal relavance (MMR) , and multiQuery retriever and finally contextual compressor retriever;; there are lot of good retriever; and also understand why we need retriever

--- a/requirements.txt
+++ b/requirements.txt
@@ -53,3 +53,11 @@ bs4
 
 ## for vector store db
 chromadb
+
+
+
+# for retriever
+# langchain==0.2.14 \
+# langchain-core==0.2.34 \
+# langchain-community==0.2.12 \
+# langchain-huggingface==0.0.3
